--- a/style.css
+++ b/style.css
@@ -184,16 +184,18 @@ html {
   line-height: 1.7rem;
 }
 
+.space {
+  margin-top: 350px;
+}
+
 #p1 {
   font-family: 'Poppins SemiBold', sans-serif;
   font-size: 4rem;
 }
 
-.CU {
+.content .container-box a {
   color: #d04b38;
-  /* text-decoration: none; */
   font-size: 19px;
-  margin-bottom: -150px;
 }
 
 .CU:hover {
@@ -211,88 +213,29 @@ html {
   margin-top: -300px;
 }
 
-.container {
+.desc2 {
+  margin-top: 160px;
+  margin-bottom: 50px;
+}
+
+.content {
+  margin: 0 auto;
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  /* border: 1px solid red; */
-  width: 90%;
-  margin: 70px auto;
-  min-width: 150px;
+  margin-top: 50px;
 }
 
-.container-box {
-  display: flex;
-  flex-wrap: wrap;
-  flex-basis: 380px;
-  /* border: 1px solid blue; */
-  justify-content: center;
-  align-items: center;
-  height: 450px;
-  margin: 10px;
+.content .container-box {
+  width: 400px;
 }
 
-.container-box img {
-  width: 100%;
-  height: 100%;
+.content img {
+  width: 250px;
+  border-radius: 10px;
 }
-
-.container-box p {
-  padding: 10px;
-  text-align: center;
-}
-
-.container-box .desc1 {
-  margin-top: -120px;
-  line-height: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.container-box .desc2 {
-  margin-bottom: -320px;
-  line-height: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.container-box:nth-child(4) {
-  flex-direction: column;
-}
-
-.container-box:nth-child(1),
-.container-box:nth-child(2),
-.container-box:nth-child(3) {
-  margin-bottom: 200px;
-}
-
-.container-box:nth-child(4) {
-  margin-left: -50px;
-  height: 350px;
-}
-.container-box:nth-child(7) {
-  margin-left: -50px;
-  height: 0;
-}
-
-.container-box:nth-child(5),
-.container-box:nth-child(6),
-.container-box:nth-child(8),
-.container-box:nth-child(9) {
-  flex-basis: 500px;
-  height: 350px;
-  align-items: flex-start;
-}
-
-/* .container-box:nth-child(8),
-  .container-box:nth-child(9){
-      margin-top: -200px;
-  } */
-
-/* .container-box:nth-child(5),
-  .container-box:nth-child(6){
-      margin-bottom: -200px;
-  } */
 
 .box {
   flex: 1 0 35%;
@@ -339,11 +282,14 @@ html {
   margin-bottom: 2rem;
   text-align: start;
   padding-left: 20px;
+  padding-bottom: 20px;
+  color: #d04b38;
 }
 
 hr {
   width: 85%;
   margin: 0 auto;
+  margin-top: 200px;
 }
 
 footer #parg {
@@ -359,6 +305,8 @@ footer #parg {
 footer {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 footer .footers {
